# bsbr

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.cursor/rules/: run-python-and-pip-using-uv.mdc
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: api-docs.yml  docs.yml  tests.yml
api/bsbr/: index.html
api/bsbr_extras/: index.html
api/bsbr_transformers/: index.html
converter_findings/: index.html
docs/: converter_findings.md  index.md
docs/api/: bsbr.md  bsbr_extras.md  bsbr_transformers.md
docs/examples/: advanced_usage.md  basic_usage.md  research_examples.md
docs/getting-started/: installation.md  quickstart.md
docs/research/: background.md  benchmarks.md  bsbr_conversion_evaluation.md  bsbr_conversion_research.md  experiments.md  index.md
docs/user-guide/: core-concepts.md
evals/: README.md  analyze_results.py  compare_models.py
evals/convert/: benchmark_comparison.py  output_comparison.py
examples/advanced_usage/: index.html
examples/basic_usage/: index.html
examples/research_examples/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
paper/: main.tex  references.bib
research/: index.html
research/architecture_comparisons/: README.md  analyze_results.py  blog.md  compare_models.py  visualize_models.py
research/background/: index.html
research/benchmarks/: index.html
research/bsbr_conversion_evaluation/: index.html
research/bsbr_conversion_research/: index.html
research/conversion_experiments/: benchmark_comparison.py  output_comparison.py
research/experiments/: index.html
research_results/: similarity_metrics.json
scripts/: setup_dev_env.ps1  setup_dev_env.sh
search/: search_index.json
site/: index.html
src/bsbr/: __init__.py
tests/: test_converter.py  test_delta_net.py  test_gpt2_converter.py  test_linear_transformer.py
(+34 files in other folders)
