[project]
name = "bsbr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "jacob", email = "jacobfv123@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "pytest>=8.3.5",
    "torch>=2.6.0",
]

[project.optional-dependencies]
extras = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
