[project]
name = "bsbr"
version = "0.1.1"
description = "Block Sparse Attention with Block Retrieval - An efficient attention mechanism for long-context reasoning"
readme = "README.md"
authors = [
    { name = "Jacob F. V.", email = "jacobfv123@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "pytest>=8.3.5",
    "seaborn>=0.13.2",
    "torch>=2.6.0",
]

[project.urls]
Homepage = "https://github.com/JacobFV/bsbr"
Repository = "https://github.com/JacobFV/bsbr.git"
Documentation = "https://bsbr.readthedocs.io/"
Issues = "https://github.com/JacobFV/bsbr/issues"

[project.optional-dependencies]
extras = [
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "pytest>=8.3.5",
    "seaborn>=0.13.2",
    "torch>=2.6.0",
]
docs = [
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.5.3",
    "mkdocs-git-revision-date-localized-plugin>=1.2.0",
    "mkdocs-minify-plugin>=0.7.1",
    "mkdocs-social-plugin>=0.1.0",
    "mkdocs-pymdownx-material-extras>=3.10.0",
    "mkdocs-macros-plugin>=1.2.1",
    "mkdocs-swagger-ui-tag>=0.0.7",
    "mkdocs-redirects>=1.2.1",
    "mkdocs-awesome-pages-plugin>=2.9.2",
    "mkdocs-macros-plugin>=1.2.1",
    "mkdocs-swagger-ui-tag>=0.0.7",
    "mkdocs-redirects>=1.2.1",
    "mkdocs-awesome-pages-plugin>=2.9.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
